--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
     "lint": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint"
-},
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
@@ -14,6 +14,7 @@
     "sass": "^1.50.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.5"
   },
