--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lint": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "sass": "^1.50.0",
