--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-axios": "^2.1.5",
     "vue-cookies": "^1.8.3",
     "vue-router": "^3.2.0",
+    "vue-toggle-btn": "^0.1.2",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
